changed package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Sepia Light",
+  "name": "sepia-syntax",
   "theme": "syntax",
   "version": "0.8.0",
   "description": "A sepia based theme focused on a light background, with contrast of syntax and pleasurable, long term viewing.",
