--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sepia-syntax",
   "theme": "syntax",
   "version": "1.0.0",
-  "description": "A sepia based theme focused on a light background, with contrast of syntax and pleasurable, long term viewing.",
+  "description": "A light theme with a focus on syntax clarity.",
   "repository": "https://github.com/lucaska/sepia-syntax",
   "license": "MIT",
   "engines": {
